Move scss to webpacker and add foundation css

--- a/config/locales/word_books/ja.yml
+++ b/config/locales/word_books/ja.yml
@@ -7,9 +7,15 @@ ja:
         name: 単語
         translation: 意味
   word_books:
-    button:
-      add_words: 単語を追加する
-      remove_word: 削除する
-      back: 戻る
-    new:
-      
+    form:
+      title: タイトル
+      button:
+        add_words: 単語を追加する
+        back: 戻る
+    word_fields:
+      button:
+        remove_word: 削除する
+      label:
+        name: 単語
+        translation: 意味
+
