--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -31,18 +31,18 @@ ja:
     confirmations:
       confirmed: メールアドレスが確認できました。
       new:
-        resend_confirmation_instructions: アカウント確認メール再送
-      send_instructions: アカウントの有効化について数分以内にメールでご連絡します。
+        resend_confirmation_instructions: 会員確認メール再送
+      send_instructions: 会員の有効化について数分以内にメールでご連絡します。
       send_paranoid_instructions: メールアドレスが登録済みの場合、本人確認用のメールが数分以内に送信されます。
     failure:
       already_authenticated: すでにログインしています。
-      inactive: アカウントが有効化されていません。メールに記載された手順にしたがって、アカウントを有効化してください。
+      inactive: 会員が有効化されていません。メールに記載された手順にしたがって、会員を有効化してください。
       invalid: "%{authentication_keys}またはパスワードが違います。"
-      last_attempt: もう一回誤るとアカウントがロックされます。
-      locked: アカウントは凍結されています。
+      last_attempt: もう一回誤ると会員がロックされます。
+      locked: 会員は凍結されています。
       not_found_in_database: "%{authentication_keys}またはパスワードが違います。"
       timeout: セッションがタイムアウトしました。もう一度ログインしてください。
-      unauthenticated: アカウント登録もしくはログインしてください。
+      unauthenticated: 会員登録もしくはログインしてください。
       unconfirmed: メールアドレスの本人確認が必要です。
     mailer:
       confirmation_instructions:
@@ -66,14 +66,14 @@ ja:
         instruction_3: パスワードの再設定は、上のリンクから新しいパスワードを登録するまで完了しません。
         subject: パスワードの再設定について
       unlock_instructions:
-        action: アカウントのロック解除
+        action: 会員のロック解除
         greeting: "%{recipient}様"
-        instruction: アカウントのロックを解除するには下のリンクをクリックしてください。
-        message: ログイン失敗が繰り返されたため、アカウントはロックされています。
-        subject: アカウントの凍結解除について
+        instruction: 会員のロックを解除するには下のリンクをクリックしてください。
+        message: ログイン失敗が繰り返されたため、会員はロックされています。
+        subject: 会員の凍結解除について
     omniauth_callbacks:
-      failure: "%{kind} アカウントによる認証に失敗しました。理由：（%{reason}）"
-      success: "%{kind} アカウントによる認証に成功しました。"
+      failure: "%{kind} 会員による認証に失敗しました。理由：（%{reason}）"
+      success: "%{kind} 会員による認証に成功しました。"
     passwords:
       edit:
         change_my_password: パスワードを変更する
@@ -81,7 +81,7 @@ ja:
         confirm_new_password: 確認用新しいパスワード
         new_password: 新しいパスワード
       new:
-        forgot_your_password: パスワードを忘れましたか?
+        forgot_your_password: パスワードを忘れた方
         send_me_reset_password_instructions: パスワードの再設定方法を送信する
       no_token: このページにはアクセスできません。パスワード再設定メールのリンクからアクセスされた場合には、URL をご確認ください。
       send_instructions: パスワードの再設定について数分以内にメールでご連絡いたします。
@@ -89,10 +89,10 @@ ja:
       updated: パスワードが正しく変更されました。
       updated_not_active: パスワードが正しく変更されました。
     registrations:
-      destroyed: アカウントを削除しました。またのご利用をお待ちしております。
+      destroyed: 会員を削除しました。またのご利用をお待ちしております。
       edit:
         are_you_sure: 本当によろしいですか?
-        cancel_my_account: アカウント削除
+        cancel_my_account: 会員削除
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
         leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
         title: "%{resource}編集"
@@ -100,36 +100,41 @@ ja:
         update: 更新
         we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
       new:
-        sign_up: アカウント登録
-      signed_up: アカウント登録が完了しました。
-      signed_up_but_inactive: ログインするためには、アカウントを有効化してください。
-      signed_up_but_locked: アカウントが凍結されているためログインできません。
-      signed_up_but_unconfirmed: 本人確認用のメールを送信しました。メール内のリンクからアカウントを有効化させてください。
-      update_needs_confirmation: アカウント情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。
-      updated: アカウント情報を変更しました。
-      updated_but_not_signed_in: あなたのアカウントは正常に更新されましたが、パスワードが変更されたため、再度ログインしてください。
+        sign_up: 会員登録
+      signed_up: 会員登録が完了しました。
+      signed_up_but_inactive: ログインするためには、会員を有効化してください。
+      signed_up_but_locked: 会員が凍結されているためログインできません。
+      signed_up_but_unconfirmed: 本人確認用のメールを送信しました。メール内のリンクから会員を有効化させてください。
+      update_needs_confirmation: 会員情報を変更しました。変更されたメールアドレスの本人確認のため、本人確認用メールより確認処理をおこなってください。
+      updated: 会員情報を変更しました。
+      updated_but_not_signed_in: あなたの会員は正常に更新されましたが、パスワードが変更されたため、再度ログインしてください。
     sessions:
       already_signed_out: 既にログアウト済みです。
       new:
         sign_in: ログイン
+        sub_title:
+          general: メールアドレスでログイン
+          oauth: ソーシャルアカウントでログイン
       signed_in: ログインしました。
       signed_out: ログアウトしました。
     shared:
       links:
         back: 戻る
-        didn_t_receive_confirmation_instructions: アカウント確認のメールを受け取っていませんか?
-        didn_t_receive_unlock_instructions: アカウントの凍結解除方法のメールを受け取っていませんか?
-        forgot_your_password: パスワードを忘れましたか?
+        didn_t_receive_confirmation_instructions: 会員確認のメールを受け取っていませんか?
+        didn_t_receive_unlock_instructions: 会員の凍結解除方法のメールを受け取っていませんか?
+        forgot_your_password: パスワードを忘れた方
         sign_in: ログイン
         sign_in_with_provider: "%{provider}でログイン"
-        sign_up: アカウント登録
+        sign_up: 会員登録はこちら
       minimum_password_length: "（%{count}字以上）"
+      omniauth_links:
+        sign_in_with_provider: "%{provider}でログイン"
     unlocks:
       new:
-        resend_unlock_instructions: アカウントの凍結解除方法を再送する
-      send_instructions: アカウントの凍結解除方法を数分以内にメールでご連絡します。
-      send_paranoid_instructions: アカウントが見つかった場合、アカウントの凍結解除方法を数分以内にメールでご連絡します。
-      unlocked: アカウントを凍結解除しました。
+        resend_unlock_instructions: 会員の凍結解除方法を再送する
+      send_instructions: 会員の凍結解除方法を数分以内にメールでご連絡します。
+      send_paranoid_instructions: 会員が見つかった場合、会員の凍結解除方法を数分以内にメールでご連絡します。
+      unlocked: 会員を凍結解除しました。
   errors:
     messages:
       already_confirmed: は既に登録済みです。ログインしてください。
