--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,7 +7,7 @@ ja:
       users_edit: プロフィール変更
       logout: ログアウト
       login: ログイン
-      register: 新規登録
+      register: 会員登録
       users_configuration: プロフィール設定
   activerecord:
     errors:
