--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     attributes:
       user:
+        name: 名前
         confirmation_sent_at: パスワード確認送信時刻
         confirmation_token: パスワード確認用トークン
         confirmed_at: パスワード確認時刻
@@ -26,7 +27,7 @@ ja:
         unlock_token: ロック解除用トークン
         updated_at: 更新日
     models:
-      user: ユーザ
+      user: アカウント
   devise:
     confirmations:
       confirmed: メールアドレスが確認できました。
@@ -91,16 +92,20 @@ ja:
     registrations:
       destroyed: 会員を削除しました。またのご利用をお待ちしております。
       edit:
+        password: パスワード
         are_you_sure: 本当によろしいですか?
-        cancel_my_account: 会員削除
+        cancel_my_account: 退会する
         currently_waiting_confirmation_for_email: "%{email} の確認待ち"
-        leave_blank_if_you_don_t_want_to_change_it: 空欄のままなら変更しません
+        leave_blank_if_you_don_t_want_to_change_it: パスワードを変更するときに入力
         title: "%{resource}編集"
         unhappy: 気に入りません
         update: 更新
-        we_need_your_current_password_to_confirm_your_changes: 変更を反映するには現在のパスワードを入力してください
+        we_need_your_current_password_to_confirm_your_changes: 変更するには現在のパスワードを入力
       new:
         sign_up: 会員登録
+        sub_title:
+          general: メールアドレスで会員登録
+          oauth: ソーシャルアカウントで会員登録
       signed_up: 会員登録が完了しました。
       signed_up_but_inactive: ログインするためには、会員を有効化してください。
       signed_up_but_locked: 会員が凍結されているためログインできません。
@@ -123,7 +128,7 @@ ja:
         didn_t_receive_confirmation_instructions: 会員確認のメールを受け取っていませんか?
         didn_t_receive_unlock_instructions: 会員の凍結解除方法のメールを受け取っていませんか?
         forgot_your_password: パスワードを忘れた方
-        sign_in: ログイン
+        sign_in: ログインはこちら
         sign_in_with_provider: "%{provider}でログイン"
         sign_up: 会員登録はこちら
       minimum_password_length: "（%{count}字以上）"
